# tentura_server

./: .gitignore  Caddyfile  README.md  compose.override.example.yaml  compose.yaml  docker-compose.dev.override.yml  docker-compose.override.dev.yml  docker-compose.yml
.github/workflows/: build_and_test.yml
auth/: pubspec.yaml
auth/test/: auth_test.dart
gravity_server/: Dockerfile  pubspec.yaml
gravity_server/lib/: app.dart
gravity_server/test/: auth_test.dart
hasura/: dump_all.sql  metadata.json  schema.sql
meritrank/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
meritrank/meritrank_service/: asgi.py  gql_types.py  graphql.py  gravity_rank.py  log.py  postgres_edges_provider.py  postgres_edges_updater.py  rest.py
meritrank/tests/: test_asgi.py  test_gravity.py  test_restore_edges_data.py
openresty/: .gitignore  Dockerfile  README.md  reload.sh
openresty/app/: auth.lua  beacon.lua  build_config.lua  gql.lua  image.lua  jwt.lua  preview.lua  test_jwt.lua  upload.lua  user.lua
openresty/conf/: acme.conf  app.conf  cert.pem  key.pem  location_acme.conf  location_test.conf  log_format.conf  mime_types.conf  nginx.conf  template.conf
openresty/lib/: upload.lua
openresty/lib/app/: auth.lua  jwt.lua
openresty/lib/resty/: evp.lua
openresty/scripts/: create_cert_and_keys.sh  reload.sh
openresty/static/css/: preview.css
postgres/: 20_pgmer2.sh  Dockerfile
