[tool.poetry]
name = "meritrank-service"
version = "1.3.0"
description = "Web service for calculating MeritRank scores"
authors = ["V.G. Bulavintsev <golem.md@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/intersubjective/meritrank-service"
repository = "https://github.com/intersubjective/meritrank-service"
license = "GPLv2"


[tool.poetry.dependencies]
python = "^3.11"
classy-fastapi = "^0.5.1"
meritrank-python = "0.2.4"
psycopg2-binary = "^2.9.7"
strawberry-graphql = {extras = ["fastapi"], version = "^0.209.2"}
asyncpg-listen = "^0.0.6"
fastapi = "^0.103.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = {extras = ["toml"], version = "^6.5.0"}
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
httpx = "^0.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["meritrank_service"]

[tool.coverage.report]
show_missing = true
#fail_under = 100
